# scylla-failover-manager

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config.toml
docker/code/: Dockerfile
kubernetes/: common.yml  helmfile.yaml  production.yml  staging.yml
script/: console  deploy  down  setup  up
src/: consts.rs  failover_manager.rs  force_host_error.rs  google.rs  lib.rs  main.rs  test_utils.rs
src/fixtures/compute/: get_instance-europe-west4-a.json  get_instance-europe-west4-b.json  get_instance-europe-west4-c.json  get_instance-localhost-europe-west4-b.json  get_instance-missing-instance-europe-west4-a.json  get_instance-missing-instance-europe-west4-b.json  get_instance-missing-instance-europe-west4-c.json  get_instance-primary-europe-west4-b.json  postgres_servers-europe-west4-a.json  postgres_servers-europe-west4-b.json  postgres_servers-europe-west4-c.json  simple.json
src/fixtures/dns/: simple.json  simple_test.json  update_response.json  with_name.json  with_name_localhost.json
src/fixtures/pubsub/: host_error_log_entry.json  invalid_host_entry.json  localhost.json  not_a_host_error.json
src/google/: compute.rs  instance.json  pubsub.rs
